--- a/css/cobranza.css
+++ b/css/cobranza.css
@@ -57,7 +57,7 @@ body {
   .buttons button {
     padding: 10px 15px;
     font-size: 14px;
-    background-color: #007bff;
+    background-color: #145A32;
     color: white;
     border: none;
     border-radius: 4px;
@@ -81,7 +81,7 @@ body {
   }
   
   thead {
-    background-color: #007bff;
+    background-color: #145A32;
     color: white;
   }
   
