--- a/css/ventas.css
+++ b/css/ventas.css
@@ -19,7 +19,7 @@ body {
 /* Sidebar */
 .sidebar {
   width: 250px;
-  background-color: #2c3e50;
+  background-color: #145A32;
   color: #ecf0f1;
   display: flex;
   flex-direction: column;
@@ -66,11 +66,11 @@ body {
 
 
 .sidebar nav ul li a:hover {
-  background-color: #34495e;
+  background-color: #27AE60;
 }
 
 .sidebar nav ul li a.active {
-  background-color: #34495e; /* Color de fondo para el enlace activo */
+  background-color: #27AE60; /* Color de fondo para el enlace activo */
 }
 /* Main Content */
 .main-content {
@@ -85,7 +85,7 @@ body {
 
 .main-content header h1 {
   font-size: 24px;
-  color: #333;
+  color: #239B56;
 }
 
 /* Cards Section */
@@ -107,7 +107,7 @@ body {
 .card h2 {
   font-size: 18px;
   margin-bottom: 10px;
-  color: #555;
+  color: #239B56;
 }
 
 .card .amount {
@@ -321,7 +321,7 @@ body {
 
 .new-sale-button {
   padding: 10px 15px;
-  background-color: #007bff;
+  background-color: #145A32;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -330,7 +330,7 @@ body {
 }
 
 .new-sale-button:hover {
-  background-color: #0056b3;
+  background-color: #145A32;
 }
 
 .ventas-search {
@@ -442,7 +442,7 @@ body {
 .key-metric p {
   font-size: 24px;
   font-weight: bold;
-  color: #3498db;
+  color: #239B56;
 }
 
 /* General reset */
@@ -653,7 +653,7 @@ form input, form button {
 }
 
 .table-container th {
-  background: #2c3e50;
+  background: #145A32;
   color: white;
   text-align: left;
   padding: 12px;
